<resources>
    <string name="app_name">Zebra Comics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Zebra Comics</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="about_developer">About Developer</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome to Zebra Comics</string>
    <string name="home">Home</string>

    <string name="title_activity_launcher">LaunchActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="whatsapp_numbers">(+237) 682&#8211;709&#8211;676 / 677&#8211;687&#8211;694 / 678&#8211;588&#8211;824</string>
    <string name="zebra_gmail">zebracomics@gmail.com</string>
    <string name="zebra_facebook">Zebra Comics Inc.</string>
    <string name="zebra_instagram">zebra.comics.inc</string>
    <string name="zebra_twitter">ZEBRA COMICS INC.</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>


    <string name="invite_info">
   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        remaining essentially unchanged. It was popularised in the 1960s
    </string>

    <string name="contact_info">
   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        remaining essentially unchanged. It was popularised in the 1960s
    </string>

    <string name="more_info">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        typesetting, remaining essentially unchanged. It was popularised in the 1960s
    </string>

    <string name="about_info">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>

    <string name="rate_app_test">
        We are a team that work earnestly hard to see that we have just what you need at the right time.
        Hearing from you greatly helps us to better improve our app to suite your desires.
        Please click the button below to rate this app thanks.
    </string>
    <string name="rate_app_text">Rate App</string>

    <!-- FAQs Section -->

    <string name="faq1">What are comics?</string>
    <string name="faq2">What is cartoon animation?</string>
    <string name="faq3">How are comics created?</string>
    <string name="faq4">How do I become part of Zebra Comics?</string>
    <string name="faq5">Where can I get a hard copy of your comics?</string>
    <string name="faq6"> </string>
    <string name="faq7"> </string>
    <string name="faq8"> </string>
    <string name="faq9"> </string>
    <string name="faq10"> </string>


    <string name="faq1_txt">
Comics are a series of drawings and pictures, telling a story. Comic fall under the 9th Art.
    </string>
    <string name="faq2_txt">
Cartoon animation, especially 2D, refers to the art of making a movie, using a succession of drawings with slight differences. When they are viewed quickly, they give an illusion of movement.
    </string>
    <string name="faq3_txt">
There are four main steps in the production of a comic: pencilling, inking, colouring and lettering.
    </string>
    <string name="faq4_txt">
Zebra Comics, apart from its in-house stories, publishes other authors, provided their comics match our publication criteria.
    </string>
    <string name="faq5_txt">
        <p>Our comic books are available in:</p>
        <b>Yaounde: Librairie des Peuples noirs,</b>
        Douala: LIPACAM, FNAC (Super U)
        Buea: Em Jay’s Supermarket
    </string>
    <string name="faq6_txt">Full Name</string>
    <string name="faq7_txt">Full Name</string>
    <string name="faq8_txt">Full Name</string>
    <string name="faq9_txt">Full Name</string>
    <string name="faq10_txt">Full Name</string>






    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Show Next</string>
    <string name="backdrop_title">LOVE COMICS</string>
    <string name="backdrop_subtitle">This season top 20 comics</string>


    <!-- important not to remove (teitter and facebook login credentials) -->
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">239840886857066</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb239840886857066</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="mobile_number">Mobile Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
