<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/contact_us"
                    android:scaleType="centerCrop"
                    android:src="@drawable/contact_us" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/contact_us"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_info"
                        android:textColor="#555" />
                </LinearLayout>


                <Button
                    android:id="@+id/zebra_facebook_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/facebook"
                    android:drawablePadding="10dp"
                    android:text="@string/zebra_facebook"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:id="@+id/zebra_instagram_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/insta"
                    android:drawablePadding="10dp"
                    android:text="@string/zebra_instagram"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/zebra_twitter_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/twitter"
                    android:drawablePadding="10dp"
                    android:text="@string/zebra_twitter"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/zebra_gmail_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/gmail"
                    android:drawablePadding="10dp"
                    android:text="@string/zebra_gmail"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/zebra_whatsapp_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/whatsapp"
                    android:drawablePadding="10dp"
                    android:text="@string/whatsapp_numbers"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>