<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contact_us"
                    android:scaleType="centerCrop"
                    android:src="@drawable/about_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/about_us"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_info"
                        android:textColor="#555" />
                </LinearLayout>


                <Button
                    android:id="@+id/zebra_website_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_language_black_24dp"
                    android:drawablePadding="10dp"
                    android:text="@string/zebra_facebook"
                    android:textAlignment="center"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>