<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="25sp"
        android:background="#dbe1dd"
        android:text="FAQs"
        android:textColor="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/expand_button_1"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_add_circle_white_36dp"
            android:drawablePadding="4dp"
            android:elevation="6dp"
            android:padding="16dp"
            android:text="@string/faq1"
            android:textColor="#fff" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/faq1_txt"
                android:textColor="#000" />

        </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expand_button_2"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_add_circle_white_36dp"
            android:drawablePadding="4dp"
            android:elevation="6dp"
            android:padding="16dp"
            android:text="@string/faq2"
            android:textColor="#fff" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/faq2_txt"
                android:textColor="#000" />

        </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expand_button_3"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_add_circle_white_36dp"
            android:drawablePadding="4dp"
            android:elevation="6dp"
            android:padding="16dp"
            android:text="@string/faq3"
            android:textColor="#fff" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/faq3_txt"
                android:textColor="#000" />

        </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expand_button_4"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_add_circle_white_36dp"
            android:drawablePadding="4dp"
            android:elevation="6dp"
            android:padding="16dp"
            android:text="@string/faq4"
            android:textColor="#fff" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/faq4_txt"
                android:textColor="#000" />

        </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expand_button_5"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_add_circle_white_36dp"
            android:drawablePadding="4dp"
            android:elevation="6dp"
            android:padding="16dp"
            android:text="@string/faq5"
            android:textColor="#fff" />

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/expandable_layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:clipToPadding="false"
                android:elevation="4dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="10dp"
                android:text="@string/faq5_txt"
                android:textColor="#000" />

        </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>



</LinearLayout>

</ScrollView>