<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/contact_us"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_app_test"
                        android:textColor="#555" />
                </LinearLayout>


                <Button
                    android:id="@+id/rate_app_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/star"
                    android:drawableRight="@drawable/star"
                    android:drawablePadding="10dp"
                    android:text="@string/rate_app_text"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:background="@color/colorPrimary"
                    android:theme="@style/PrimaryFlatButton"
                    tools:ignore="ButtonStyle"
                    android:layout_marginBottom="5dp"/>
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>